# ggml.rs

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs
