[package]
name = "ggml-rs"
version = "0.1.0"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "tensors", "ggml", "ml"]
description = "A rust binding to GGML library."
license = "MIT"
resolver = "2"

[dependencies]

[features]
default = ["vulkan"]
cmake = []
cuda = []
sycl = []
metal = []
vulkan = []
blas = []
static = []
kompute = []


[build-dependencies]
cc = "^1.0"
bindgen = "0.69"
cmake = "0.1"
